Include wishlists if user has linked telegram
